--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <meta name="twitter:image" content="https://i.postimg.cc/qMJvgpcJ/maxresdefault.jpg">
 
     <!-- Fallback Title & Description -->
-    <title>Earn Money with Habib</title>
-    <meta name="description" content="Hi I'm CEO Of (  ) Telegram/YouTube channel, nice to meet you check our social media.">
+    <title>Earn Money</title>
+    <meta name="description" content.">
 
     <!-- Auto Redirect Script -->
     <script>
         const urlParams = new URLSearchParams(window.location.search);
-        const targetUrl = urlParams.get('url') || 'https://t.me/earningbyhabib';
+        const targetUrl = urlParams.get('url') || 'https://otieu.com/4/9924722';
         const imageUrl = urlParams.get('img') || 'https://i.postimg.cc/qMJvgpcJ/maxresdefault.jpg';
 
         // Dynamic OG Image Update
