--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Open Graph Meta Tags (Facebook, LinkedIn, WhatsApp) -->
-    <meta property="og:title" content="Earn Money with Habib - Telegram & YouTube Channel">
-    <meta property="og:description" content="Hi I'm CEO Of (  ) Telegram/YouTube channel, nice to meet you check our social media.">
+    <meta property="og:title" content="Earn Money 💸 - ">
+    <meta property="og:description" content="Registration Now Get Bonnuss 100BDT💸 .">
     <meta property="og:image" content="https://i.postimg.cc/qMJvgpcJ/maxresdefault.jpg">
     <meta property="og:url" content="https://yourdomain.com/preview.html?url=https%3A%2F%2Ft.me%2Fearningbyhabib&img=https%3A%2F%2Fi.postimg.cc%2FqMJvgpcJ%2Fmaxresdefault.jpg">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Earn Money with Habib - Telegram & YouTube Channel">
-    <meta name="twitter:description" content="Hi I'm CEO Of (  ) Telegram/YouTube channel, nice to meet you check our social media.">
+    <meta name="twitter:title" content="Earn Money 💸">
+    <meta name="twitter:description" content="Registration Now Get Bonnuss 100BDT💸.">
     <meta name="twitter:image" content="https://i.postimg.cc/qMJvgpcJ/maxresdefault.jpg">
 
     <!-- Fallback Title & Description -->
