--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script>
         const urlParams = new URLSearchParams(window.location.search);
         const targetUrl = urlParams.get('url') || 'https://otieu.com/4/9924722';
-        const imageUrl = urlParams.get('img') || 'https://i.postimg.cc/qMJvgpcJ/maxresdefault.jpg';
+        const imageUrl = urlParams.get('img') || 'https://i.postimg.cc/J0rDKqJz/images-49.jpg';
 
         // Dynamic OG Image Update
         document.querySelector('meta[property="og:image"]').setAttribute('content', imageUrl);
