--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Open Graph Meta Tags (Facebook, LinkedIn, WhatsApp) -->
     <meta property="og:title" content="Earn Money 💸 - ">
     <meta property="og:description" content="Registration Now Get Bonnuss 100BDT💸 .">
-    <meta property="og:image" content="https://i.postimg.cc/qMJvgpcJ/maxresdefault.jpg">
+    <meta property="og:image" content="https://i.postimg.cc/J0rDKqJz/images-49.jpg">
     <meta property="og:url" content="https://yourdomain.com/preview.html?url=https%3A%2F%2Ft.me%2Fearningbyhabib&img=https%3A%2F%2Fi.postimg.cc%2FqMJvgpcJ%2Fmaxresdefault.jpg">
     <meta property="og:type" content="website">
 
