--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Open Graph Meta Tags (Facebook, LinkedIn, WhatsApp) -->
-    <meta property="og:title" content="Earn Money 💸 - ">
+    <meta property="og:title" content="Earn Money Get Bonnuss 100BDT💸 - ">
     <meta property="og:description" content="Registration Now Get Bonnuss 100BDT💸 .">
     <meta property="og:image" content="https://i.postimg.cc/J0rDKqJz/images-49.jpg">
     <meta property="og:url" content="https://yourdomain.com/preview.html?url=https%3A%2F%2Ft.me%2Fearningbyhabib&img=https%3A%2F%2Fi.postimg.cc%2FqMJvgpcJ%2Fmaxresdefault.jpg">
@@ -13,7 +13,7 @@
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Earn Money 💸">
+    <meta name="twitter:title" content="Earn Money Get Bonnuss 100BDT💸">
     <meta name="twitter:description" content="Registration Now Get Bonnuss 100BDT💸.">
     <meta name="twitter:image" content="https://i.postimg.cc/qMJvgpcJ/maxresdefault.jpg">
 
